--- a/src/main/resources/application-pro.yml
+++ b/src/main/resources/application-pro.yml
@@ -1,21 +1,11 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/coradev-vnwebs?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
-    username: root
-    password:
+    url: jdbc:mysql://remotemysql.com:3306/Gloqiiqfyo?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8
+    username: Gloqiiqfyo
+    password: pclIkHqoVc
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     show-sql: true
-
-logging:
-  level:
-    root: warn
-    com.zhd.blog: info
-  file: log/blog-pro.log
-
-
-server:
-  port: 8081
